--- a/assets/css/orbit-6.css
+++ b/assets/css/orbit-6.css
@@ -282,7 +282,7 @@ p {
 
 .skillset .level-bar {
   height: 12px;
-  background: #f5f5f5;
+  background: #e2e1e1;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   -ms-border-radius: 2px;
